<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarNota.Actualizar_Nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- ID DE LA NOTA -->
        <TextView
            android:id="@+id/Id_nota_A"
            android:text="@string/Id_nota_A"
            android:textSize="18sp"
            android:fontFamily="@font/worksans"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <!--ID DEL USUARIO-->
        <TextView
            android:id="@+id/Uid_usuario_A"
            android:hint="@string/Uid_usuario_A"
            android:textSize="18sp"
            android:visibility="gone"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <!--CORREO DEL USUARIO-->
        <TextView
            android:id="@+id/Correo_usuario_A"
            android:hint="@string/Correo_usuario_A"
            android:textSize="18sp"
            android:visibility="gone"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <!--FECHA DE REGISTRO-->
        <TextView
            android:id="@+id/Fecha_registro_A"
            android:hint="@string/Fecha_registro_A"
            android:visibility="gone"
            android:textSize="18sp"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <!--ESTADO DE LA NOTA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Tarea_finalizada"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#16A085"
                android:visibility="gone">
            </androidx.appcompat.widget.AppCompatImageView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Tarea_no_finalizada"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:background="#E74C3C"
                android:visibility="gone">
            </androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:id="@+id/Estado_A"
                android:text="@string/Estado_A"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--TITULO-->
        <EditText
            android:id="@+id/Titulo_A"
            android:hint="@string/Titulo_A"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <!--DESCRIPCION-->
        <EditText
            android:id="@+id/Descripcion_A"
            android:hint="@string/Descripcion_A"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ABRIR CALENDARIO -->
            <Button
                android:id="@+id/btn_Calendario_A"
                android:text="@string/btn_Calendario_A"
                app:icon="@drawable/icono_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>

            <!-- FECHA ACTUAL -->
            <TextView
                android:id="@+id/Fecha_A"
                android:hint="@string/Fecha_A"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/Spinner_estado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </Spinner>
            
            <TextView
                android:id="@+id/Estado_nuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Estado_nuevo">
            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.appcompat.widget.LinearLayoutCompat>





</ScrollView>