<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">
        
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            app:cardBackgroundColor="@color/teal_700"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">
            
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:src="@drawable/imagen_perfil">
                </androidx.appcompat.widget.AppCompatImageView>

                <!--DATOS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/BienvenidoPrincipal"
                        android:textColor="#fff"
                        android:fontFamily="@font/worksans"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                    <ProgressBar
                        android:id="@+id/progressBarDatos"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </ProgressBar>

                    <!--UID-->
                    <TextView
                        android:id="@+id/UidPrincipal"
                        android:text="@string/UidPrincipal"
                        android:visibility="gone"
                        android:textColor="#fff"
                        android:fontFamily="@font/worksans"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                    <!--NOMBRES-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linear_nombres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/nombre_menu">
                        </androidx.appcompat.widget.AppCompatImageView>

                        <TextView
                            android:id="@+id/NombresPrincipal"
                            android:text="@string/NombresPrincipal"
                            android:textColor="#fff"
                            android:fontFamily="@font/worksans"
                            android:textSize="17sp"
                            android:layout_marginStart="3dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                        


                    </androidx.appcompat.widget.LinearLayoutCompat>


                    <!--CORREOS-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linear_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/correo_menu">
                        </androidx.appcompat.widget.AppCompatImageView>

                        <TextView
                            android:id="@+id/CorreoPrincipal"
                            android:text="@string/CorreoPrincipal"
                            android:textColor="#fff"
                            android:fontFamily="@font/worksans"
                            android:textSize="17sp"
                            android:layout_marginStart="3dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>

                    </androidx.appcompat.widget.LinearLayoutCompat>





                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 1 & 2 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <!--OPCION 1-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/agregar">
                    </androidx.appcompat.widget.AppCompatImageView>
                    <Button
                        android:id="@+id/AgregarNotas"
                        android:text="@string/AgregarNotas"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans">
                    </Button>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--OPCION 2-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/lista">
                    </androidx.appcompat.widget.AppCompatImageView>
                    <Button
                        android:id="@+id/ListarNotas"
                        android:text="@string/ListarNotas"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans">
                    </Button>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- 3 & 4 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <!--OPCION 3-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/archivados">
                    </androidx.appcompat.widget.AppCompatImageView>
                    <Button
                        android:id="@+id/Archivados"
                        android:text="@string/Archivados"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans">
                    </Button>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--OPCION 4-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/perfil">
                    </androidx.appcompat.widget.AppCompatImageView>
                    <Button
                        android:id="@+id/Perfil"
                        android:text="@string/Perfil"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans">
                    </Button>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- 5 & 6 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <!--OPCION 5-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/acerca_de">
                    </androidx.appcompat.widget.AppCompatImageView>
                    <Button
                        android:id="@+id/AcerdaDe"
                        android:text="@string/AcerdaDe"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans">
                    </Button>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--OPCION 6-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/salir">
                    </androidx.appcompat.widget.AppCompatImageView>
                    <Button
                        android:id="@+id/CerrarSesion"
                        android:text="@string/CerrarSesion"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans">
                    </Button>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
            
        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>